Added new dance classes and added lineUp button and functionality

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,17 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/coloryDancer.js"></script>
+    <script src="src/growyDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addLineUp">Line Up</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColoryDancer">add a colory dancer</a>   
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeGrowyDancer">add a growy dancer</a>   
+       </div>
     <script src="src/init.js"></script>
   </body>
 </html>
