--- a/dancefloor.html
+++ b/dancefloor.html
@@ -5,17 +5,17 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
-    <script src="src/blinkyDancer.js"></script>
-    <script src="src/coloryDancer.js"></script>
-    <script src="src/growyDancer.js"></script>
+    <script src="src/appleCat.js"></script>
+    <script src="src/heartCat.js"></script>
+    <script src="src/cat.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addLineUp">Line Up</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColoryDancer">add a colory dancer</a>   
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeGrowyDancer">add a growy dancer</a>   
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeAppleCat">add an apple cat dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeHeartCat">add a heart cat dancer</a>   
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCat">add a cat dancer</a>   
        </div>
     <script src="src/init.js"></script>
   </body>
